make button gray when disabled

--- a/mindful.html
+++ b/mindful.html
@@ -93,6 +93,13 @@ p:last-of-type {
       gap: 20px;
       margin-top: 20px;
     }
+    button:disabled,
+button.disabled {
+  background-color: #d3d3d3; /* Light gray */
+  color: #888; /* Darker text for contrast */
+  cursor: not-allowed;
+}
+
   </style>
 </head>
 <body>
